--- a/Blue/manifest.json
+++ b/Blue/manifest.json
@@ -1,10 +1,11 @@
 {
     // Required
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Blue",
     "description": "Blue, pour vous servir",
-    "version": "0.10",
-    "browser_action": {
+    "version": "0.1.0",
+
+    "action": {
       "default_popup": "popup.html",
         "default_icon": {
           "16": "icon/Blue/icon_16px.png",
@@ -32,10 +33,6 @@
         }
       ]
       ,
-      "background": {
-        "scripts": ["background.js"],
-        "peristent": false      
-      },
       "permissions": ["webNavigation"],
       "icons": {
         "16": "icon/Blue/icon_16px.png",
