--- a/Blue/manifest.json
+++ b/Blue/manifest.json
@@ -25,7 +25,10 @@
       "content_scripts": [
         {
           "matches": ["<all_urls>"],
-          "css": ["css/google_revise.css"]
+          "css": ["css/google_revise.css"],
+          "exclude_matches": [
+            "https://hugokirch.github.io/BLUE_QUIZ/*"
+          ]
         },
         {
           "matches": ["<all_urls>"],
