--- a/Blue/manifest.json
+++ b/Blue/manifest.json
@@ -33,7 +33,7 @@
         },
         {
           "matches": ["<all_urls>"],
-          "js": ["js/event1.js"]
+          "js": ["js/button.js"]
         }
       ]
       ,
